src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.Navbar, .About, .Home {
    font-size: 20px; 
}

.NavbarList {
    display: none;
}

.NavbarEntry:hover {
    border-style: solid;
}

.Sidebar {
    display: flex;
    flex-direction: column;
    text-align: left;
}

.NavbarListClicked {
    display: flex;
    flex-direction: column;
}

.SidebarIcon {
    height: 5vh;
    object-fit: contain;
}

.SidebarButton {
    background-color: transparent;
    border-style: none;
}

.LppLogo {
    height: 20vh;
    object-fit: contain;
}

.LogoNav {
    display: flex;
    flex-direction: column;
    position: fixed;
}

.Navigate {
    height: 10vh;
    object-fit: contain;
    margin: 0 auto;
}

